<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoCSP</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_settings">AutoCSP</string>
    <string name="activate_title">Ativar</string>
    <string name="activate_summary">Insere o código de CSP nas chamadas DDD</string>
    <string name="input_phone">Número do telefone</string>
    <string name="button_call">Chamar</string>
    <string name="csp_title">CSP Padrão</string>
    <string name="csp_summary">Código de seleção de prestadora a ser usado</string>
    <string name="category_call_settings">Opções de ligação</string>
    <string name="local_title">Chamada local</string>
    <string name="local_summary">Retira os códigos de CSP e DDD para chamadas locais</string>
    <string name="ddd_title">DDD do chip</string>
    <string name="ddd_summary">Código DDD deste SIM card</string>
    <string name="category_misc_settings">Outras opções</string>
    <string name="toast_title">Mostrar informação</string>
    <string name="toast_summary">Exibe o número corrigido ao discar</string>
    <string name="toast_local_call">Chamada local sem DDD\nDiscando para %1$s</string>
    <string name="toast_ddd_call">Chamada DDD com CSP %1$s\nDiscando para %2$s</string>

</resources>